<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.zizou.marvel.presentation.viewmodel.CharacterItemViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <TextView
            android:id="@+id/text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{viewModel.character.name}"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <Button
            android:id="@+id/button_thumbnail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/dialog_thumbnail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_name"/>
        <Button
            android:id="@+id/button_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_urls"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_thumbnail"/>
        <Button
            android:id="@+id/button_comics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_comics"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_url"/>
        <Button
            android:id="@+id/button_stories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_stories"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_comics"/>
        <Button
            android:id="@+id/button_events"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_events"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_stories"/>
        <Button
            android:id="@+id/button_series"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_series"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_events"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
